--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.12.0",
+    "react-scroll": "^1.9.3",
     "tailwindcss": "^4.1.18",
     "three": "^0.182.0"
   },
@@ -23,6 +25,7 @@
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
+    "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
